--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,12 +20,10 @@ pipeline {
             }
             post {
                 always {
-                    script {
-                        def logContent = currentBuild.rawBuild.getLog(100).join("\n")
-                        mail to: "angelo.mouzouris@gmail.com",
-                             subject: "Unit and Integration Tests - Result",
-                             body: "The stage has completed with status: ${currentBuild.currentResult}.\n\nLogs:\n${logContent}"
-                    }
+                    mail to: "angelo.mouzouris@gmail.com",
+                         subject: "Unit and Integration Tests - Result",
+                         body: "The stage has completed with status: ${currentBuild.currentResult}.",
+                         attachLog: true
                 }
             }
         }
@@ -48,12 +46,10 @@ pipeline {
             }
             post {
                 always {
-                    script {
-                        def logContent = currentBuild.rawBuild.getLog(100).join("\n")
-                        mail to: "angelo.mouzouris@gmail.com",
-                             subject: "Security Scan - Result",
-                             body: "The stage has completed with status: ${currentBuild.currentResult}.\n\nLogs:\n${logContent}"
-                    }
+                    mail to: "angelo.mouzouris@gmail.com",
+                         subject: "Security Scan - Result",
+                         body: "The stage has completed with status: ${currentBuild.currentResult}.",
+                         attachLog: true
                 }
             }
         }
