--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,23 +2,121 @@ pipeline {
     agent any
 
     stages {
-        stage('Test Stage') {
+        stage('Build') {
             steps {
-                echo 'This is a test stage.'
+                script {
+                    echo 'Stage 1: Building the code...'
+                    echo 'Tool: Maven'
+                }
+            }
+            post {
+                success {
+                    emailext attachLog: true,
+                             to: "angelo.mouzouris@gmail.com",
+                             subject: "Build Status Email - Success",
+                             body: "The build was successful. Check the attached log for details."
+                }
+                failure {
+                    emailext attachLog: true,
+                             to: "angelo.mouzouris@gmail.com",
+                             subject: "Build Status Email - Failure",
+                             body: "The build failed. Check the attached log for details."
+                }
+            }
+        }
+        
+        stage('Unit and Integration Tests') {
+            steps {
+                script {
+                    echo 'Stage 2: Running Unit and Integration Tests...'
+                    echo 'Tool: JUnit for Unit Tests, TestNG for Integration Tests'
+                }
+            }
+            post {
+                always {
+                    emailext attachLog: true,
+                             to: "angelo.mouzouris@gmail.com",
+                             subject: "Unit and Integration Tests - ${currentBuild.currentResult}",
+                             body: """
+                             The stage 'Unit and Integration Tests' has completed with status: ${currentBuild.currentResult}.
+                             Check the attached log for details.
+                             """
+                }
+            }
+        }
+
+        stage('Code Analysis') {
+            steps {
+                script {
+                    echo 'Stage 3: Analyzing Code...'
+                    echo 'Tool: SonarQube'
+                }
+            }
+        }
+
+        stage('Security Scan') {
+            steps {
+                script {
+                    echo 'Stage 4: Performing Security Scan...'
+                    echo 'Tool: OWASP Dependency-Check'
+                }
+            }
+            post {
+                always {
+                    emailext attachLog: true,
+                             to: "angelo.mouzouris@gmail.com",
+                             subject: "Security Scan - ${currentBuild.currentResult}",
+                             body: """
+                             The stage 'Security Scan' has completed with status: ${currentBuild.currentResult}.
+                             Check the attached log for details.
+                             """
+                }
+            }
+        }
+
+        stage('Deploy to Staging') {
+            steps {
+                script {
+                    echo 'Stage 5: Deploying to Staging...'
+                    echo 'Tool: AWS CLI for deploying to an AWS EC2 instance'
+                }
+            }
+        }
+
+        stage('Integration Tests on Staging') {
+            steps {
+                script {
+                    echo 'Stage 6: Running Integration Tests on Staging...'
+                    echo 'Tool: Selenium'
+                }
+            }
+        }
+
+        stage('Deploy to Production') {
+            steps {
+                script {
+                    echo 'Stage 7: Deploying to Production...'
+                    echo 'Tool: AWS CLI for deploying to an AWS EC2 instance'
+                }
             }
         }
     }
-
+    
     post {
         always {
-            script {
-                def logFile = "${env.WORKSPACE}/pipeline-log.txt"
-                writeFile file: logFile, text: currentBuild.rawBuild.getLog().join("\n")
-            }
-            emailext attachmentsPattern: 'pipeline-log.txt',
+            echo 'This will always run after all stages.'
+        }
+        success {
+            emailext attachLog: true,
                      to: "angelo.mouzouris@gmail.com",
-                     subject: "Test Email with Attached Log",
-                     body: "The pipeline has completed. Please find the log attached."
+                     subject: "Pipeline Success",
+                     body: "The pipeline completed successfully. Check the attached log for details."
+        }
+        failure {
+            emailext attachLog: true,
+                     to: "angelo.mouzouris@gmail.com",
+                     subject: "Pipeline Failure",
+                     body: "The pipeline failed. Check the attached log for details."
         }
     }
 }
