--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,27 +6,80 @@ pipeline {
             steps {
                 script {
                     echo 'Stage 1: Building the code...'
-                    writeFile file: 'build.log', text: 'This is a small log file.'
-                }
-            }
-            post {
-                success {
-                    emailext attachmentsPattern: 'build.log',
-                             to: "angelo.mouzouris@gmail.com",
-                             subject: "Build Status Email - Success",
-                             body: "The build was successful. Check the attached log for details."
-                }
-                failure {
-                    emailext attachmentsPattern: 'build.log',
-                             to: "angelo.mouzouris@gmail.com",
-                             subject: "Build Status Email - Failure",
-                             body: "The build failed. Check the attached log for details."
+                    echo 'Tool: Maven'
                 }
             }
         }
         
-        // Other stages here...
+        stage('Unit and Integration Tests') {
+            steps {
+                script {
+                    echo 'Stage 2: Running Unit and Integration Tests...'
+                    echo 'Tool: JUnit for Unit Tests, TestNG for Integration Tests'
+                }
+            }
+            post {
+                always {
+                    mail to: "angelo.mouzouris@gmail.com",
+                         subject: "Unit and Integration Tests - Result",
+                         body: "The stage has completed with status: ${currentBuild.currentResult}.",
+                         attachLog: true
+                }
+            }
+        }
 
+        stage('Code Analysis') {
+            steps {
+                script {
+                    echo 'Stage 3: Analyzing Code...'
+                    echo 'Tool: SonarQube'
+                }
+            }
+        }
+
+        stage('Security Scan') {
+            steps {
+                script {
+                    echo 'Stage 4: Performing Security Scan...'
+                    echo 'Tool: OWASP Dependency-Check'
+                }
+            }
+            post {
+                always {
+                    mail to: "angelo.mouzouris@gmail.com",
+                         subject: "Security Scan - Result",
+                         body: "The stage has completed with status: ${currentBuild.currentResult}.",
+                         attachLog: true
+                }
+            }
+        }
+
+        stage('Deploy to Staging') {
+            steps {
+                script {
+                    echo 'Stage 5: Deploying to Staging...'
+                    echo 'Tool: AWS CLI for deploying to an AWS EC2 instance'
+                }
+            }
+        }
+
+        stage('Integration Tests on Staging') {
+            steps {
+                script {
+                    echo 'Stage 6: Running Integration Tests on Staging...'
+                    echo 'Tool: Selenium'
+                }
+            }
+        }
+
+        stage('Deploy to Production') {
+            steps {
+                script {
+                    echo 'Stage 7: Deploying to Production...'
+                    echo 'Tool: AWS CLI for deploying to an AWS EC2 instance'
+                }
+            }
+        }
     }
     
     post {
@@ -34,14 +87,14 @@ pipeline {
             echo 'This will always run after all stages.'
         }
         success {
-            emailext to: "angelo.mouzouris@gmail.com",
-                     subject: "Pipeline Success",
-                     body: "The pipeline completed successfully."
+            mail to: "angelo.mouzouris@gmail.com",
+                 subject: "Pipeline Success",
+                 body: "The pipeline completed successfully."
         }
         failure {
-            emailext to: "angelo.mouzouris@gmail.com",
-                     subject: "Pipeline Failure",
-                     body: "The pipeline failed."
+            mail to: "angelo.mouzouris@gmail.com",
+                 subject: "Pipeline Failure",
+                 body: "The pipeline failed."
         }
     }
 }
