--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,16 +11,10 @@ pipeline {
             }
             post {
                 success {
-                    emailext attachLog: true,
-                             to: "angelo.mouzouris@gmail.com",
-                             subject: "Build Status Email - Success",
-                             body: "The build was successful. Check the attached log for details."
+                    echo 'Build completed successfully.'
                 }
                 failure {
-                    emailext attachLog: true,
-                             to: "angelo.mouzouris@gmail.com",
-                             subject: "Build Status Email - Failure",
-                             body: "The build failed. Check the attached log for details."
+                    echo 'Build failed.'
                 }
             }
         }
@@ -53,14 +47,11 @@ pipeline {
                 }
             }
             post {
-                always {
-                    emailext attachLog: true,
-                             to: "angelo.mouzouris@gmail.com",
-                             subject: "Code Analysis - ${currentBuild.currentResult}",
-                             body: """
-                             The stage 'Code Analysis' completed with status: ${currentBuild.currentResult}.
-                             Check the attached log for details.
-                             """
+                success {
+                    echo 'Code analysis completed successfully.'
+                }
+                failure {
+                    echo 'Code analysis failed.'
                 }
             }
         }
@@ -92,17 +83,6 @@ pipeline {
                     echo 'Tool: AWS CLI for deploying to an AWS EC2 instance'
                 }
             }
-            post {
-                always {
-                    emailext attachLog: true,
-                             to: "angelo.mouzouris@gmail.com",
-                             subject: "Deploy to Staging - ${currentBuild.currentResult}",
-                             body: """
-                             The stage 'Deploy to Staging' completed with status: ${currentBuild.currentResult}.
-                             Check the attached log for details.
-                             """
-                }
-            }
         }
 
         stage('Integration Tests on Staging') {
@@ -110,17 +90,6 @@ pipeline {
                 script {
                     echo 'Stage 6: Running Integration Tests on Staging...'
                     echo 'Tool: Selenium'
-                }
-            }
-            post {
-                always {
-                    emailext attachLog: true,
-                             to: "angelo.mouzouris@gmail.com",
-                             subject: "Integration Tests on Staging - ${currentBuild.currentResult}",
-                             body: """
-                             The stage 'Integration Tests on Staging' completed with status: ${currentBuild.currentResult}.
-                             Check the attached log for details.
-                             """
                 }
             }
         }
@@ -132,17 +101,6 @@ pipeline {
                     echo 'Tool: AWS CLI for deploying to an AWS EC2 instance'
                 }
             }
-            post {
-                always {
-                    emailext attachLog: true,
-                             to: "angelo.mouzouris@gmail.com",
-                             subject: "Deploy to Production - ${currentBuild.currentResult}",
-                             body: """
-                             The stage 'Deploy to Production' completed with status: ${currentBuild.currentResult}.
-                             Check the attached log for details.
-                             """
-                }
-            }
         }
     }
     
@@ -151,16 +109,14 @@ pipeline {
             echo 'This will always run after all stages.'
         }
         success {
-            emailext attachLog: true,
-                     to: "angelo.mouzouris@gmail.com",
-                     subject: "Pipeline Success",
-                     body: "The pipeline completed successfully. Check the attached log for details."
+            mail to: "angelo.mouzouris@gmail.com",
+                 subject: "Pipeline Success",
+                 body: "The pipeline completed successfully."
         }
         failure {
-            emailext attachLog: true,
-                     to: "angelo.mouzouris@gmail.com",
-                     subject: "Pipeline Failure",
-                     body: "The pipeline failed. Check the attached log for details."
+            mail to: "angelo.mouzouris@gmail.com",
+                 subject: "Pipeline Failure",
+                 body: "The pipeline failed."
         }
     }
 }
